--- a/Languages/ChineseSimplified/DefInjected/StuffCategoryDef/StuffCategories.xml
+++ b/Languages/ChineseSimplified/DefInjected/StuffCategoryDef/StuffCategories.xml
@@ -1,7 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<LanguageData>
-
-  <Technic.label>技术</Technic.label>
-
-
-</LanguageData>
+<?xml version="1.0" encoding="utf-8"?>
+	<LanguageData>
+		<Technic.label>技术</Technic.label>
+	</LanguageData>
