--- a/Languages/ChineseSimplified/DefInjected/TraderKindDef/TraderKinds.xml
+++ b/Languages/ChineseSimplified/DefInjected/TraderKindDef/TraderKinds.xml
@@ -1,8 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<LanguageData>
-
-  <Caravan_Tech.label>百科全书</Caravan_Tech.label>
-  <Orbital_Tech.label>外部势力出版商</Orbital_Tech.label>
-
-
-</LanguageData>
+<?xml version="1.0" encoding="utf-8"?>
+	<LanguageData>
+		<Caravan_Tech.label>百科全书</Caravan_Tech.label>
+		<Orbital_Tech.label>外部势力出版商</Orbital_Tech.label>
+	</LanguageData>
