--- a/Languages/ChineseTraditional/DefInjected/JobDef/Jobs.xml
+++ b/Languages/ChineseTraditional/DefInjected/JobDef/Jobs.xml
@@ -1,10 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<LanguageData>
-
-  <LearnTech.reportString>學習TargetB。</LearnTech.reportString>
-  <DocumentTech.reportString>記錄TargetB。</DocumentTech.reportString>
-  <ResearchTech.reportString>正在研究TargetB。</ResearchTech.reportString>
-  <TrainWeapon.reportString>練習TargetB。</TrainWeapon.reportString>
-
-
-</LanguageData>
+<?xml version="1.0" encoding="utf-8"?>
+	<LanguageData>
+		<LearnTech.reportString>學習中</LearnTech.reportString>
+		<DocumentTech.reportString>記錄中</DocumentTech.reportString>
+		<ResearchTech.reportString>研究中</ResearchTech.reportString>
+		<TrainWeapon.reportString>練習TargetB中。</TrainWeapon.reportString>
+	</LanguageData>
