--- a/Languages/ChineseTraditional/DefInjected/RecipeDef/Recipes.xml
+++ b/Languages/ChineseTraditional/DefInjected/RecipeDef/Recipes.xml
@@ -1,36 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<LanguageData>
-
-  <LearnTech.label>學習技術</LearnTech.label>
-  <LearnTech.description>學習以獲取有關新技術的知識。</LearnTech.description>
-  <LearnTech.jobString>正在學習一項新技術。</LearnTech.jobString>
-
-  <DocumentTech.label>記錄技術</DocumentTech.label>
-  <DocumentTech.description>將技術知識記錄到書籍中。</DocumentTech.description>
-  <DocumentTech.jobString>正在記錄技術。</DocumentTech.jobString>
-
-  <ResearchTech.label>研究技術</ResearchTech.label>
-  <ResearchTech.description>通過研究新技術來擴展知識。</ResearchTech.description>
-  <ResearchTech.jobString>研究中。</ResearchTech.jobString>
-
-  <TrainWeaponShooting.label>學習使用遠程武器</TrainWeaponShooting.label>
-  <TrainWeaponShooting.description>練習遠程武器以熟悉其操作。</TrainWeaponShooting.description>
-  <TrainWeaponShooting.jobString>正在練習遠程武器。</TrainWeaponShooting.jobString>
-
-  <TrainWeaponMelee.label>學習使用近戰武器</TrainWeaponMelee.label>
-  <TrainWeaponMelee.description>練習近戰武器以熟悉其操作。</TrainWeaponMelee.description>
-  <TrainWeaponMelee.jobString>正在練習近戰武器</TrainWeaponMelee.jobString>
-
-
-  <!-- From ItchyFlea's Practise Target -->
-
-  <PracticeShooting.label>練習射擊</PracticeShooting.label>
-  <PracticeShooting.description>向目標射擊以練習射擊精度。</PracticeShooting.description>
-  <PracticeShooting.jobString>正在練習射擊。</PracticeShooting.jobString>
-
-  <PracticeMelee.label>練習格鬥</PracticeMelee.label>
-  <PracticeMelee.description>練習近距離對抗假人。</PracticeMelee.description>
-  <PracticeMelee.jobString>正在練習格鬥。</PracticeMelee.jobString>
-
-
-</LanguageData>
+<?xml version="1.0" encoding="utf-8"?>
+	<LanguageData>
+		<LearnTech.label>學習技術</LearnTech.label>
+		<LearnTech.description>學習以獲取有關新技術的知識。</LearnTech.description>
+		<LearnTech.jobString>正在學習一項新技術。</LearnTech.jobString>
+		<DocumentTech.label>記錄技術</DocumentTech.label>
+		<DocumentTech.description>將技術知識記錄到書籍中。</DocumentTech.description>
+		<DocumentTech.jobString>正在記錄技術。</DocumentTech.jobString>
+		<TrainWeaponShooting.label>學習使用遠程武器</TrainWeaponShooting.label>
+		<TrainWeaponShooting.description>練習遠程武器以熟悉其操作。</TrainWeaponShooting.description>
+		<TrainWeaponShooting.jobString>正在練習遠程武器。</TrainWeaponShooting.jobString>
+		<TrainWeaponMelee.label>學習使用近戰武器</TrainWeaponMelee.label>
+		<TrainWeaponMelee.description>練習近戰武器以熟悉其操作。</TrainWeaponMelee.description>
+		<TrainWeaponMelee.jobString>正在練習近戰武器</TrainWeaponMelee.jobString>
+		<PracticeShooting.label>練習射擊</PracticeShooting.label>
+		<PracticeShooting.description>向目標射擊以練習射擊精度。</PracticeShooting.description>
+		<PracticeShooting.jobString>正在練習射擊。</PracticeShooting.jobString>
+		<PracticeMelee.label>練習格鬥</PracticeMelee.label>
+		<PracticeMelee.description>練習近距離對抗假人。</PracticeMelee.description>
+		<PracticeMelee.jobString>正在練習格鬥。</PracticeMelee.jobString>
+	</LanguageData>
