update CHS/CHT/JPN translation for 0.16a (thanks leafzxg)

--- a/Languages/ChineseSimplified/Keyed/HumanResources_keys.xml
+++ b/Languages/ChineseSimplified/Keyed/HumanResources_keys.xml
@@ -27,6 +27,8 @@
   <TabCatalogue>目录</TabCatalogue>
   <!--EN: {0} books in {1} shelves-->
   <AvailableBooksReport>{1}个书架上有{0}本书</AvailableBooksReport>
+  <!--EN: Right-click to show on Research Tree.-->
+  <RightClickToTree>右键点击可显示研究树。</RightClickToTree>
 
   <!--Settings-->
   
