--- a/Languages/Japanese/Keyed/HumanResources_keys.xml
+++ b/Languages/Japanese/Keyed/HumanResources_keys.xml
@@ -4,7 +4,7 @@
   <!--UI-->
   
   <!--EN: Tech-->
-  <TabKnowledge>テクノロジ</TabKnowledge>
+  <TabKnowledge>テック</TabKnowledge>
   <!--EN: Knowledge-->
   <TabKnowledgeTitle>知識</TabKnowledgeTitle>
   <!--EN: Weapons Proficiency-->
@@ -27,7 +27,9 @@
   <TabCatalogue>目録</TabCatalogue>
   <!--EN: {0} books in {1} shelves-->
   <AvailableBooksReport>{1}台の本棚に{0}冊の本</AvailableBooksReport>
-
+  <!--EN: Right-click to show on Research Tree.-->
+  <RightClickToTree>右クリックすると、研究ツリーが表示されます。</RightClickToTree>
+  
   <!--Settings-->
   
   <!--EN: Knowledge generation draws from...-->
@@ -129,7 +131,7 @@
   <!--EN: {0_nameDef} has not been trained to use this weapon.-->
   <UnknownWeapon>{0_nameDef} はまだこの武器の訓練を十分に受けていません。</UnknownWeapon>
   <!--EN: {0_nameDef} believes this strange weapon is evil, {0_pronoun} won't touch it.-->
-  <EvilWeapon>{0_nameDef} はこの武器が邪悪だと思い込んでおり、触りません。</EvilWeapon>
+  <EvilWeapon>{0_nameDef} はこの武器が邪悪だと思い込んでおり、それを触りません。</EvilWeapon>
   <!--EN: {0} is already known.-->
   <TechAlreadyKnown>{0} は既知です。</TechAlreadyKnown>
 
