--- a/Languages/Japanese/Keyed/HumanResources_keys.xml
+++ b/Languages/Japanese/Keyed/HumanResources_keys.xml
@@ -30,6 +30,14 @@
   <!--EN: Right-click to show on Research Tree.-->
   <RightClickToTree>右クリックすると、研究ツリーが表示されます。</RightClickToTree>
   
+  <!--NEW--><ClickToAssignForStudying>Left-click to assign for studying.</ClickToAssignForStudying>
+  <!--NEW--><ClickToAssignForDocumentation>Left-click to assign for documentation.</ClickToAssignForDocumentation>
+  <!--NEW--><ClickToUnassign>Left-click to unassign.</ClickToUnassign>
+  <!--NEW--><AssignedToResearch>{0} is tasked with researching this.</AssignedToResearch>
+  <!--NEW--><AssignedToStudy>{0} is tasked with studying this.</AssignedToStudy>
+  <!--NEW--><AssignedToDocument>{0} is tasked with documenting this.</AssignedToDocument>
+  <!--NEW--><ClickToRemove>click to remove</ClickToRemove>
+  
   <!--Settings-->
   
   <!--EN: Knowledge generation draws from...-->
@@ -128,10 +136,12 @@
   <DoesntKnowHowToCraft>{0_nameDef} は「{1}」を完成させる方法が分かりません（{2} の知識が必要）。</DoesntKnowHowToCraft>
   <!--EN: {0_nameDef} doesn't know how to cultivate {1} (requires {2}).-->
   <DoesntKnowThisPlant>{0_nameDef} は {1} を植える方法が分かりません（{2} の知識が必要）。</DoesntKnowThisPlant>
-  <!--EN: {0_nameDef} has not been trained to use this weapon.-->
+
+  <!--CHANGED--><!--EN: Pawn has not been trained to use this weapon-->
   <UnknownWeapon>{0_nameDef} はまだこの武器の訓練を十分に受けていません。</UnknownWeapon>
-  <!--EN: {0_nameDef} believes this strange weapon is evil, {0_pronoun} won't touch it.-->
+  <!--CHANGED--><!--EN: Pawn cannot comprehend this weapon and is scared of it-->
   <EvilWeapon>{0_nameDef} はこの武器が邪悪だと思い込んでおり、それを触りません。</EvilWeapon>
+  
   <!--EN: {0} is already known.-->
   <TechAlreadyKnown>{0} は既知です。</TechAlreadyKnown>
 
