--- a/Languages/French/Keyed/HumanResources_keys.xml
+++ b/Languages/French/Keyed/HumanResources_keys.xml
@@ -28,15 +28,26 @@
   <!--EN: {0} books in {1} shelves-->
   <AvailableBooksReport>{0} livre(s) dans {1} étagère(s)</AvailableBooksReport>
   
-  <!--NEW--><ClickToAssignForStudying>Left-click to assign for studying.</ClickToAssignForStudying>
-  <!--NEW--><ClickToAssignForDocumentation>Left-click to assign for documentation.</ClickToAssignForDocumentation>
-  <!--NEW--><ClickToUnassign>Left-click to unassign.</ClickToUnassign>
-  <!--NEW--><RightClickToTree>Right-click to show on Research tree.</RightClickToTree>
-  <!--NEW--><AssignedToResearch>{0} is tasked with researching this.</AssignedToResearch>
-  <!--NEW--><AssignedToStudy>{0} is tasked with studying this.</AssignedToStudy>
-  <!--NEW--><AssignedToDocument>{0} is tasked with documenting this.</AssignedToDocument>
-  <!--NEW--><ClickToRemove>click to remove</ClickToRemove>
+  <!--NEW
+  <ClickToAssignForStudying>Left-click to assign for studying.</ClickToAssignForStudying>
+  <ClickToAssignForDocumentation>Left-click to assign for documentation.</ClickToAssignForDocumentation>
+  <ClickToUnassign>Left-click to unassign.</ClickToUnassign>
+  <RightClickToTree>Right-click to show on Research tree.</RightClickToTree>
+  <AssignedToResearch>{0} is tasked with researching this.</AssignedToResearch>
+  <AssignedToStudy>{0} is tasked with studying this.</AssignedToStudy>
+  <AssignedToDocument>{0} is tasked with documenting this.</AssignedToDocument>
+  <ClickToRemove>click to remove</ClickToRemove>
+  -->
 
+  <ClickToAssignForStudying>Clic-gauche pour affecter à l'étude.</ClickToAssignForStudying>
+  <ClickToAssignForDocumentation>Clic-gauche pour affecter à la documentation.</ClickToAssignForDocumentation>
+  <ClickToUnassign>Clic-gauche pour annuler l'affectation.</ClickToUnassign>
+  <RightClickToTree>Clic-droit pour afficher dans l'arbre des recherches.</RightClickToTree>
+  <AssignedToResearch>{0} est affecté.e à cette recherche.</AssignedToResearch>
+  <AssignedToStudy>{0} est affecté.e à l'étude de ceci.</AssignedToStudy>
+  <AssignedToDocument>{0} est affecté.e à la documentation de ceci.</AssignedToDocument>
+  <ClickToRemove>Clic-gauche pour retirer.</ClickToRemove>
+  
   <!--Settings-->
   
   <!--EN: Knowledge generation draws from...-->
@@ -137,9 +148,9 @@
   <DoesntKnowThisPlant>{0_nameDef} ne sait pas cultiver des {1}（nécessite {2}）。</DoesntKnowThisPlant>
   
   <!--CHANGED--><!--EN: Pawn has not been trained to use this weapon-->
-  <UnknownWeapon>{0_nameDef} n'a pas été entraîné au maniement de cette arme.</UnknownWeapon>
+  <UnknownWeapon>Ce colon n'a pas été entraîné au maniement de cette arme.</UnknownWeapon>
   <!--CHANGED--><!--EN: Pawn cannot comprehend this weapon and is scared of it-->
-  <EvilWeapon>{0_nameDef} croit que cette arme est diabolique, {0_pronoun} ne s'en approchera pas.</EvilWeapon>
+  <EvilWeapon>Ce colon ne comprend pas cette arme, et en a un peu peur.</EvilWeapon>
   
   <!--EN: {0} is already known.-->
   <TechAlreadyKnown>{0} est déjà connu.e.</TechAlreadyKnown>
